--- a/mypresentation.tex
+++ b/mypresentation.tex
@@ -163,6 +163,15 @@ Very important information
 \end{columns}
 \end{frame}
 
+\begin{frame}
+\vspace{8em}
+{\Huge Thank you for your attention!}
+
+\vspace{8em}
+Please feel free to contact me at
+\url{jozko.mrkvicka@stuba.sk}
+\end{frame}
+
 
 
 
