Navod pre BP/DP

--- a/UAMAIbeamer.tex
+++ b/UAMAIbeamer.tex
@@ -82,7 +82,7 @@
 \usepackage{theorem}
 \usepackage{epsfig}
 \usepackage{mathrsfs} %mathscr
-\usepackage[cp1250]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{courier} % To get courier fonts in listings
 \usepackage{listings}
