--- a/mypresentation.tex
+++ b/mypresentation.tex
@@ -1,6 +1,7 @@
 \documentclass{beamer}
 \input{UAMAIbeamer}
 
+
 \title[Event or Presentation title] % (optional, use only with long paper titles)
 {My awesome presentation:\\ a LaTeX Beamer extravaganza}
 %\subtitle{}
@@ -162,6 +163,31 @@ Very important information
 \end{column}%
 \end{columns}
 \end{frame}
+
+\begin{frame}{Prezentácia záverečnej práce (BP/DP) (1/2)}
+\begin{itemize}
+  \item Počet strán 10-10, odporúčané 15.
+  \item Strany musia byť očíslované
+ \item Úvodná strana obsahuje, logo fakulty a ústavu, názov práce, Vaše meno a Meno školiteľa plus dátum prezentácie.
+ \item Nasledujúca strana, krátky abstrakt práce (max. 5 viet) a stručný popis čo prezentácia bude prezentovať (cez odrážky - bodovo)
+ \item V práci prezentujte HLAVNE svoj prínos žiadne úvody o všeobecnej teórii
+  \item fotografie reálnych výstupov sú vysoko vítané...
+
+\end{itemize}
+
+\end{frame}
+
+
+\begin{frame}{Prezentácia záverečnej práce (BP/DP) (1/2)}
+\begin{itemize}
+ \item Začínajte s tím prečo ste robili to čo robíte, potom aké boli východiská, ďalej ako ste samotný problém riešili a na záver zhodnoťte dosiahnuté ciele, prípadne dajte ešte krátku víziu čo by sa dalo robiť do budúcnosti (ak tam je potenciál - samozrejme).
+ \item Posledná snímka (slide) Poďakovanie za pozornosť...
+ \item Po poďakovaní čakajte na vyzvanie a potom bude prezentácia pokračovať vopred pripravenými odpoveďami na otázky oponenta. Štýlom Otázka oponenta a pod ňou Vaša odpoveď...
+ \item Ak máte videá z prezentácie dajte ich na záver svojej prezentácie, môže byť aj ako externý zdroj.
+\end{itemize}
+
+\end{frame}
+
 
 \begin{frame}
 \vspace{8em}
