Added info on dizpraca

--- a/mypresentation.tex
+++ b/mypresentation.tex
@@ -189,6 +189,20 @@ Very important information
 \end{frame}
 
 
+\begin{frame}{Prezentácia záverečnej práce (Dizertačná páca) (1/1)}
+\begin{itemize}
+ \item Uvediete podstatný obsah svojej DP a jej výsledky
+ \item splnenie cieľov zadania
+ \item prínos práce
+ \item ozsahu najviac 25 min, skôr 20 min.
+\end{itemize}
+\end{frame}
+
+
+
+
+
+
 \begin{frame}
 \vspace{8em}
 {\Huge Thank you for your attention!}
