--- a/mypresentation.tex
+++ b/mypresentation.tex
@@ -2,9 +2,9 @@
 \input{UAMAIbeamer}
 
 
-\title[Event or Presentation title] % (optional, use only with long paper titles)
-{My awesome presentation:\\ a LaTeX Beamer extravaganza}
-%\subtitle{}
+\title[Event or Presentation title] % Goes into footer. e.g. event name, date, paper number etc.
+{My awesome presentation:\\ a LaTeX Beamer extravaganza}  % Main title
+%\subtitle{} % (optional, use only with long paper titles)
 
 
 \author[] % (optional, use only with lots of authors)
