--- a/mypresentation.tex
+++ b/mypresentation.tex
@@ -14,7 +14,7 @@
 
 \begin{document}
 
-\titleslide{EN}{STU}                                % Title slide / Titulkovy slide. Language / Jazyk: SK,EN; Logo STU, SjF
+\titleslide[prof. Ing. Voldemort, PhD.]{EN}{STU}                                % Title slide / Titulkovy slide. Language / Jazyk: SK,EN; Logo STU, SjF. First optional argument [] is the supervisor / Prvý argument je vedúci
 
 %-----------------------------------
 %*** CONTENT BEGIN / ZACAT OBSAH ***
@@ -217,7 +217,7 @@ Okrem všeobecne platných princípov pre prezentácie BP/DP dizertačnú prácu
 \thankyouslide{jozko.mrkvicka@stuba.sk}{EN} % Language / jazyk: SK, EN; Your e-mail or www / Tvoja e-mail alebo www adresa
 
 \reviewbegin                                 % Use this to answer reviewer / Používať na predpripravené odpovede na oponentské otázky
-\begin{frame}[allowframebreaks,plain]{Reviewer's questions}
+\begin{frame}[allowframebreaks,plain]{Reviewer's questions} % {Otázky oponenta}
 
 {\it How did you calculate the mass of the sun?}
 
@@ -236,7 +236,7 @@ Blue light is scattered in all directions by the tiny molecules of air in Earth'
 About 31.
 
 \end{frame}
-\reviewend                                  % Use this to answer reviewer / Používať na predpripravené odpovede na oponentské otázky
+\reviewend                                  % Use this to answer reviewer / Používať na pripravené odpovede na oponentské otázky
 
 \referencesslide{Bibliography}{EN}          % Language / jazyk: SK, EN; Name of *.bib file / Nazov *.bib suboru
 
